tdf#117764: fix context menu item "Conditional formatting"

Respond to https://bugs.documentfoundation.org/show_bug.cgi?id=117764#c1
a) the function should be *available* on "clean" cells (removed after comment in gerrit)
b) answering "No", one would not edit the existing format, *but will edit a new format instead*
c) answering "Yes", one would edit the existing format

Change-Id: I8c578a59084c557939a853d4746efffbaf4e56e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140266
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>